// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Languages renders correctly when not active 1`] = `
<div>
  <ul
    class="languageMenu "
  >
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link active"
        href="/"
        hreflang="en"
      >
        English
      </a>
    </li>
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link "
        href="/ru"
        hreflang="ru"
      >
        Русский
      </a>
    </li>
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link "
        href="/uk"
        hreflang="uk"
      >
        Українська
      </a>
    </li>
  </ul>
</div>
`;

exports[`Languages renders correctly with {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} active 1`] = `
<div>
  <ul
    class="languageMenu active"
  >
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link "
        href="/"
        hreflang="en"
      >
        English
      </a>
    </li>
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link "
        href="/ru"
        hreflang="ru"
      >
        Русский
      </a>
    </li>
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link active"
        href="/uk"
        hreflang="uk"
      >
        Українська
      </a>
    </li>
  </ul>
</div>
`;

exports[`Languages renders correctly with { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } active 1`] = `
<div>
  <ul
    class="languageMenu active"
  >
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link active"
        href="/"
        hreflang="en"
      >
        English
      </a>
    </li>
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link "
        href="/ru"
        hreflang="ru"
      >
        Русский
      </a>
    </li>
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link "
        href="/uk"
        hreflang="uk"
      >
        Українська
      </a>
    </li>
  </ul>
</div>
`;

exports[`Languages renders correctly with { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } active 1`] = `
<div>
  <ul
    class="languageMenu active"
  >
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link "
        href="/"
        hreflang="en"
      >
        English
      </a>
    </li>
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link active"
        href="/ru"
        hreflang="ru"
      >
        Русский
      </a>
    </li>
    <li
      class="languageMenu__language"
    >
      <a
        class="languageMenu__link "
        href="/uk"
        hreflang="uk"
      >
        Українська
      </a>
    </li>
  </ul>
</div>
`;
